Archive2/88/cdbec69de33ebf/output
main.cpp:19:63: error: template argument 1 is invalid
     FunctionSequence<C, R(Args...)>::Type<R(C::*...F)(Args...)>::f[sizeof...(F)]
                                                               ^
main.cpp:19:5: error: too many template-parameter-lists
     FunctionSequence<C, R(Args...)>::Type<R(C::*...F)(Args...)>::f[sizeof...(F)]
     ^
main.cpp:20:19: warning: extra ';' [-Wpedantic]
         = { F... };
                   ^
